...
  factory AuthCredentials.forSignup({
    required String email,
    required String password,
    required String name,
  }) {
    return AuthCredentials(
      email: email,
      password: password,
      name: name,
      authType: AuthType.email,
    );
  }

  /// Cria credenciais para signin
...
