...
  }) : _gamificationEvents = gamificationEvents;

  @override
  String get moduleId => 'reading';

  @override
  String get moduleName => 'Reading';

  List<ModuleRule>? _rules;

  @override
  List<ModuleRule> get rules => _rules ?? [];

...
